crates/fyn-distribution-filename/src/snapshots/uv_distribution_filename__wheel__tests__ok_build_tag.snap
---
source: crates/fyn-distribution-filename/src/wheel.rs
expression: "WheelFilename::from_str(\"foo-1.2.3-202206090410-py3-none-any.whl\")"
---
Ok(
    WheelFilename {
        name: PackageName(
            "foo",
        ),
        version: "1.2.3",
        tags: Large {
            large: WheelTagLarge {
                build_tag: Some(
                    BuildTag(
                        202206090410,
                        None,
                    ),
                ),
                python_tag: [
                    Python {
                        major: 3,
                        minor: None,
                    },
                ],
                abi_tag: [
                    None,
                ],
                platform_tag: [
                    Any,
                ],
                repr: "202206090410-py3-none-any",
            },
        },
    },
)
